<resources>
    <string name="app_name">ClientStudentApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="point_of_math">Point Of Math</string>
    <string name="point_of_physic">Point Of Physic</string>
    <string name="point_of_english">Point Of English</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="two_dots">:</string>
    <string name="year_old">years old</string>
    <string name="exam_point">9</string>
    <string name="math">Math</string>
    <string name="physic">Physic</string>
    <string name="english">English</string>
    <string name="action_student_service">com.example.serverstudent.service.connect</string>
    <string name="component_student_service">com.example.serverstudent/.service.ServerService</string>
    <string name="connected_success">Connected</string>
    <string name="delete_success">Delete Success</string>
    <string name="error_sellect">Error Sellect</string>
    <string name="error_insert">Error Insert</string>
    <string name="error_update">Error Update</string>
    <string name="error_delete">Error Delete</string>
    <string name="update_success">Update Success</string>
    <string name="insert_success">Insert Success</string>
    <string name="fetch_success">Fetch Success</string>
</resources>