<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.InsertFragment">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edtPointMath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/point_of_math"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edtPointPhysic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/point_of_physic"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtPointMath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edtPointEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/point_of_english"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtPointPhysic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPointEnglish"
        app:layout_constraintVertical_bias="0.212" />

</androidx.constraintlayout.widget.ConstraintLayout>